add jwt validation

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ DATASOURCE_DB_NAME=gofiber_clean_architecture
 DATASOURCE_POOL_MAX_CONN=10
 DATASOURCE_POOL_IDLE_CONN=5
 DATASOURCE_POOL_LIFE_TIME=30000
+
+#JWT Config
+JWT_SECRET_KEY=secret
+JWT_EXPIRE_MINUTES_COUNT=60
