--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SERVER.PORT=0.0.0.0:9999
 
+#Database Config
 DATASOURCE_USERNAME=root
 DATASOURCE_PASSWORD=root
 DATASOURCE_HOST=localhost
@@ -14,3 +15,9 @@ DATASOURCE_POOL_LIFE_TIME=30000
 #JWT Config
 JWT_SECRET_KEY=secret
 JWT_EXPIRE_MINUTES_COUNT=60
+
+#Redis Config
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_POOL_MAX_SIZE=10
+REDIS_POOL_MIN_IDLE_SIZE=5
