--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,17 @@ services:
     restart: always
     ports:
       - "8080:8080"
+
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "6379:6379"
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
