--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,16 @@ services:
     ports:
       - "3306:3306"
 
+  dbtest:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: gofiber_clean_architecture_test
+    ports:
+      - "3307:3306"
+
   adminer:
     image: adminer
     restart: always
